--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,23 +42,15 @@
         <Button
             android:id="@+id/btn_add"
             android:text="+"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:layout_marginEnd="5sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <Button
-            android:id="@+id/btn_sub"
-            android:text="-"
-            android:textSize="30sp"
-            android:layout_marginEnd="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/btn_mul"
             android:text="X"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:layout_marginEnd="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -66,15 +58,22 @@
         <Button
             android:id="@+id/btn_div"
             android:text="/"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:layout_marginEnd="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <Button
+            android:id="@+id/btn_sub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:text="-"
+            android:textSize="20sp" />
 
 
     </LinearLayout>
-    
+
     <TextView
         android:id="@+id/answer"
         android:layout_gravity="center"
@@ -91,7 +90,7 @@
         android:layout_marginTop="16dp"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp"
-        android:padding="16dp"/>
+        android:padding="16dp" />
 
 
 </LinearLayout>
